bomc-kubernetes-event/bomc-order/deployment/istio/istio-bomc-app-virtualservice.yml
# The VirtualService instructs the Ingress Gateway how to route the requests that were allowed into the cluster.
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-bomc-app-order-virtualservice
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  # This VirtualService applies to requests coming through the istio-bomc-app-gateway.
  - istio-bomc-app-gateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
       prefix: /bomc-order/rest
    route:
    - destination:
        host: bomc-order-service.bomc-app.svc.cluster.local
        port:
          number: 80
        # subset: v1
  - match:
    - uri:
       prefix: /bomc-order/swagger-ui
    route:
    - destination:
        host: bomc-order-service.bomc-app.svc.cluster.local
        port:
          number: 80
---
